# QmoddSubmit

./: .gitignore  README.md  env.yml  pyproject.toml
data/: README.md  test.csv
qmodd_submit/: cli.py  conformers.py  datasets.py  spec.py
